# esp-idf-wifi-manager-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  minify_html.cmake  partitions.csv  sdkconfig.defaults
.github/workflows/: main.yml
main/: CMakeLists.txt  Kconfig  example_echo_ws_server.html  http_local_config.c  http_local_config.h  main.c  mdns_config.c  mdns_config.h  static_ip_config.c  static_ip_config.h  version_info.h
main/http_handlers/: device_handlers.c  device_handlers.h  home_handlers.c  home_handlers.h  wifi_handlers.c  wifi_handlers.h
main/pages/: index_home.html  script_home.js  style_home.css
scripts/: minify.py
